--- a/Frog_Leap_Problem_Statement.ipynb
+++ b/Frog_Leap_Problem_Statement.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "fSvLBrjwP0sr"
       },
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "qqKLcfEmQgiZ",
         "colab": {
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "nPz65EKXQnDR",
         "colab": {
@@ -142,8 +142,7 @@
       "source": [
         "### your code here\n",
         "\n",
-        "print('Press q to quit \\n Enter position of piece:')\n",
-        "pos = input()"
+        "pos=input('Press q to quit \\n Enter position of piece:')"
       ]
     },
     {
@@ -157,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "1OrsC7P9QxO6"
       },
@@ -180,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "PWZj_Js6RP2G"
       },
@@ -204,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "8_edLqe2RU8S"
       },
@@ -226,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "uM2-D1xGRiH4"
       },
@@ -248,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "1SkBYDnaTpiV"
       },
@@ -288,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "IDHxpibURriq",
         "colab": {
@@ -346,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "cQ2G3ZO_TWU5"
       },
@@ -373,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "jXOGtww7UeYQ"
       },
@@ -399,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "0S3oNzG3UifK",
         "colab": {
@@ -434,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "GYkZdiA6Uote"
       },
@@ -473,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "BjpQuMCeUvrU",
         "colab": {
